--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase de Js</title>
-    <script src="js/scripts.js"></script>
+    <!--<script src="js/scripts.js"></script>-->
+    <script src="js/bucles.js"></script>
 </head>
 <body>
-    <input type="number">
+    
 </body>
 </html>
