--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase de Js</title>
     <!--<script src="js/scripts.js"></script>-->
-    <script src="js/bucles.js"></script>
+    <!--<script src="js/bucles.js"></script>-->
 </head>
 <body>
     
 </body>
+    <script src="js/clase 17-5.js"></script>
 </html>
